--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
     "next": "^10.0.7",
+    "prismjs": "^1.23.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "remark": "^13.0.0",
-    "remark-html": "^13.0.1"
+    "remark-highlight.js": "^6.0.0",
+    "remark-html": "^13.0.1",
+    "remark-parse": "^9.0.0",
+    "remark-prism": "^1.3.4",
+    "remark-syntax-highlight": "^0.1.3",
+    "unified": "^9.2.1"
   }
 }
