--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "gray-matter": "^4.0.2",
+    "moment": "^2.29.1",
     "next": "^10.0.7",
     "prismjs": "^1.23.0",
     "react": "16.13.1",
